# sudokugame

./: .gitignore  LICENSE  Makefile  README-jp.md  README.md  pyproject.toml  sudoku.py
src/sudokugame/: __init__.py  __main__.py
src/sudokugame/core/: constants.py  game_loop.py
src/sudokugame/game/: board.py  sudoku_logic.py
src/sudokugame/game/states/: __init__.py  game_state.py
src/sudokugame/ui/: fonts.py
src/sudokugame/ui/screens/: __init__.py  game_screen.py  menu_screen.py
