[project]
name = "sudokugame"
version = "0.1.0"
description = ""
authors = [
    {name = "yuru-sha",email = "10279443+yuru-sha@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
