[tool.poetry]
name = "sudokugame"
version = "1.0.0"
description = "A Sudoku game with a graphical user interface built using Pygame"
authors = ["yuru-sha"]
readme = "README.md"
packages = [{include = "sudokugame", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.13"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
